# casinoking-platform

./: .dockerignore  .gitignore  .rooignore  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  CasinoKing.code-workspace  GEMINI.md  README.md  kill_all.py  pytest.ini  setup_roo.ps1
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  responses.py  router.py
backend/app/core/: __init__.py  config.py
backend/app/db/: README.md  __init__.py  config.py  connection.py
backend/app/modules/: __init__.py
backend/app/tools/: apply_migrations.py  bootstrap_local_admin.py
backend/migrations/: README.md
backend/migrations/seeds/: README.md
backend/migrations/sql/: 0001__bootstrap_placeholder.sql  0002__financial_core_foundations.sql  0003__users_auth_foundations.sql  0004__seed_system_ledger_accounts.sql  0005__game_sessions_foundations.sql  0006__admin_actions_foundations.sql  0007__mines_fairness_seed_internal.sql  0008__mines_fairness_seed_rotations.sql  0009__game_sessions_runtime_hardening.sql  0010__mines_backoffice_config.sql  0011__mines_backoffice_draft_publish_assets.sql  0012__schema_split_platform_rounds.sql  0013__migrate_game_sessions_data.sql  0014__drop_game_sessions.sql  0015__add_user_pii_fields.sql  0016__game_access_sessions.sql  0017__admin_roles_and_permissions.sql  0018__admin_last_login.sql  0019__access_logs.sql  0020__game_table_sessions.sql  0021__game_table_session_balance.sql  0022__admin_actions_session_void.sql  0023__platform_catalog_bootstrap.sql  0025__title_configs_split.sql  (+2 more)
(+263 files in other folders)
